--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
 body {
   background-color: #222;
 }
@@ -14,11 +18,17 @@ body {
   overflow-y: auto;
 }
 
-.content2 {
+.mac {
   background-color: aquamarine;
-  width: 334px;
-  height: 216px;
+}
+
+.phone {
+  background-color: blanchedalmond;
+  border-radius: 10px;
+  width: 180px;
+  height: 390px;
   overflow-y: auto;
+  scrollbar-width: none;
 }
 
 .video {
