--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,9 @@ body {
 }
 
 .content {
-  width: 334px;
+  border-radius: 5px;
   height: 216px;
+  width: 334px;
   overflow-y: auto;
 }
 
@@ -36,7 +37,6 @@ body {
   width: 100%;
 }
 
-/* .video-tablet {
-  width: 334px;
-  height: 216px;
-} */
+.video-tablet {
+  border-radius: 40px;
+}
