--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,49 @@ body {
 .video-tablet {
   border-radius: 40px;
 }
+
+/* .main {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+} */
+
+.canvas {
+  position: fixed !important;
+  top: 0px;
+  left: 0px;
+  width: 100vw !important;
+  height: 100vh !important;
+}
+
+span.header {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 700;
+  position: absolute;
+  display: inline-block;
+  width: 500px;
+  transform: translate3d(0, -50%, 0);
+  font-size: 5em;
+  line-height: 0.9em;
+  pointer-events: none;
+  top: 120px;
+  left: 50px;
+  z-index: 2;
+}
+
+.header {
+  position: absolute;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 700;
+  position: absolute;
+  display: inline-block;
+  width: 500px;
+  transform: translate3d(0, -50%, 0);
+  font-size: 5em;
+  line-height: 0.9em;
+  pointer-events: none;
+  top: 120px;
+  left: 50px;
+  z-index: 2;
+}
