--- a/src/App.css
+++ b/src/App.css
@@ -71,18 +71,20 @@ span.header {
   z-index: 2;
 }
 
-.header {
-  position: absolute;
+.profile {
   font-family: "Josefin Sans", sans-serif;
   font-weight: 700;
   position: absolute;
   display: inline-block;
   width: 500px;
-  transform: translate3d(0, -50%, 0);
+  /* transform: translate3d(0, -50%, 0); */
+  border-radius: 1em;
+  background-color: rgba(3, 3, 3, 0.2);
+  padding: 0.5em;
   font-size: 5em;
   line-height: 0.9em;
   pointer-events: none;
   top: 120px;
-  left: 50px;
+  right: 50px;
   z-index: 2;
 }
