--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,12 @@
   width: 12px;
 }
 
+#root {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+}
+
 body {
   background-color: #222;
 }
@@ -41,19 +47,19 @@ body {
   border-radius: 40px;
 }
 
-/* .main {
+.main {
   position: relative;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-} */
+}
 
-.canvas {
+canvas {
   position: fixed !important;
   top: 0px;
   left: 0px;
   width: 100vw !important;
   height: 100vh !important;
+  z-index: 1;
 }
 
 span.header {
@@ -71,20 +77,93 @@ span.header {
   z-index: 2;
 }
 
-.profile {
-  font-family: "Josefin Sans", sans-serif;
-  font-weight: 700;
-  position: absolute;
-  display: inline-block;
+.profile-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 500px;
   /* transform: translate3d(0, -50%, 0); */
-  border-radius: 1em;
+  border-radius: 0.4em;
   background-color: rgba(3, 3, 3, 0.2);
-  padding: 0.5em;
-  font-size: 5em;
+  padding: 2em 0em;
   line-height: 0.9em;
   pointer-events: none;
   top: 120px;
   right: 50px;
-  z-index: 2;
+  z-index: 99;
+}
+
+.icon {
+  align-items: center;
+  display: inline-flex;
+  justify-content: center;
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.icon svg {
+  align-self: center;
+  justify-self: center;
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  overflow: hidden;
+}
+
+/* .profile-container a {
+  z-index: 100;
+  color: #000;
+} */
+
+.test img {
+  border-radius: 50%;
+  width: 50%;
+}
+
+.name {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 3em;
+  font-weight: 700;
+  margin: 0.5em 0;
+}
+
+.profile-description {
+  font-size: 2em;
+  line-height: 1;
+  padding: 0 1em;
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+.button-container {
+  position: relative;
+}
+
+.button {
+  display: inline-flex;
+  align-items: center;
+}
+
+.button-title {
+  font-size: 16px;
+  font-weight: 700;
+  margin: 0px 5px;
+}
+
+.test {
+  position: absolute;
+  width: 500px;
+  height: 100vh;
+  z-index: 99;
+  right: 0;
+}
+
+.test a {
+  color: #000;
+  text-decoration: none;
+  font-size: 1.5em;
+  position: relative;
+  top: 70px;
+  /* top: 80px; */
 }
