--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,9 @@ body {
   overflow-y: hidden;
   width: 100vw;
   height: 100vh;
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .phone {
