--- a/src/App.css
+++ b/src/App.css
@@ -17,12 +17,16 @@
   height: 100vh;
 }
 
+html,
+body {
+  overflow-y: hidden;
+}
+
 body {
   background-color: #222;
-  overflow-y: hidden;
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
 }
