--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,10 @@ body {
 }
 
 body {
+  position: relative;
   background-color: #222;
   width: 100vw;
   height: 100vh;
-  position: relative;
   top: 0;
   left: 0;
 }
@@ -116,18 +116,18 @@ span.header {
 
 .test img {
   border-radius: 50%;
-  width: 50%;
+  width: 30%;
 }
 
 .name {
   font-family: "Josefin Sans", sans-serif;
-  font-size: 3em;
+  font-size: 2em;
   font-weight: 700;
   /* margin: 0.5em 0; */
 }
 
 .profile-description {
-  font-size: 2em;
+  font-size: 1em;
   line-height: 1;
   /* padding: 0 1em; */
   text-align: center;
@@ -168,6 +168,11 @@ span.header {
   color: #000;
 }
 
+.recent-works {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
 /* Mobile */
 @media (max-width: 768px) {
   .test {
@@ -190,11 +195,22 @@ span.header {
     width: 500px;
     /* height: 100vh; */
     right: 3em;
-    top: 1em;
+    top: 3em;
   }
   .profile-container {
     width: 100%;
     padding: 2em 0em;
     top: 0px;
+  }
+  .name {
+    margin: 0.5em 0em;
+  }
+  .profile-description {
+    margin-bottom: 0.5em;
+  }
+  .recent-works {
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 32px 24px;
+    margin: 0 1em;
   }
 }
