--- a/src/WebPage/WebPage.css
+++ b/src/WebPage/WebPage.css
@@ -1,7 +1,12 @@
 .content-mac {
-  background-color: #333;
+  background-color: white;
   border-radius: 5px;
+  color: black;
   height: 216px;
   width: 334px;
   overflow-y: auto;
+}
+
+.heading {
+  text-align: center;
 }
