--- a/src/App.css
+++ b/src/App.css
@@ -164,13 +164,13 @@ span.header {
 @media (max-width: 768px) {
   .test {
     right: 5vw;
-    top: 1em;
+    top: 0.5em;
     height: 40vh;
     width: 90vw;
   }
   .profile-container {
     width: 100%;
-    padding: 0;
+    padding: 0.2em;
     top: 0px;
     right: 0;
   }
