--- a/src/WebPage/WebPage.css
+++ b/src/WebPage/WebPage.css
@@ -2,8 +2,10 @@
   background-color: white;
   border-radius: 5px;
   color: black;
-  height: 216px;
-  width: 334px;
+  height: 324px;
+  /* height: 216px; */
+  width: 501px;
+  /* width: 334px; */
   overflow-y: auto;
   margin: 0;
   padding: 0 !important;
